Revert "fixed the bug related to text-wrapping on reminder page: Neetu/Akshay"
This reverts commit 834c7e9185be97aaa22face69081efed180610ab.

--- a/media/css/scss/reminder.scss
+++ b/media/css/scss/reminder.scss
@@ -7,8 +7,6 @@
     border-bottom: 1px solid;
 }
 #review_section{
- width:480px !important;
-
  h4{
     border-bottom:1px solid #CCCCCC;
  }
